--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body{
 	background: linear-gradient(45deg, #ee7752, #db3030, #23a6d5);
     /* background: conic-gradient(from 90deg at 50% 50%, #ee7752, #db3030, #23a6d5, #ee7752, #db3030, #23a6d5); */
     animation: spin 5s linear ease infinite;
-    background-size: 400% 400%;
+    background-size: 800% 800%;
 	/* background-size: 300% 300%; */
 	animation: gradient 10s ease infinite;
 	height: 100vh;
@@ -170,4 +170,50 @@ ul li:hover{
     transform: scale(1.02);
     transition: transform 0.3s ease;
     cursor: pointer;
+}
+
+/* .certificates{
+  text-align: center;
+  margin-top: 2rem;
+  font-size: 3rem;
+  transform-origin: center;
+  animation: spinCert 2s linear;
+} */
+
+.certificates{
+    text-align: center;
+    margin-top: 2rem;
+    font-size: 3rem;
+    transform-origin: center;
+    animation: spinCert 2s linear;
+}
+
+/* @keyframes spinCert {
+  0% {
+    opacity: 0;
+    transform: translateX(-100vw) scale(0.25) rotateY(0deg);
+  }
+  50% {
+    opacity: 0.5;
+    transform:  scale(0.75) rotateY(360deg);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0) scale(1) rotateY(720deg);
+  }
+} */
+
+@keyframes spinCert {
+  0% {
+    opacity: 0;
+    transform: scale(0.25) rotateY(0deg);
+  }
+  50% {
+    opacity: 0.5;
+    transform:  scale(0.75) rotateY(360deg);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1) rotateY(720deg);
+  }
 }
