--- a/styles.css
+++ b/styles.css
@@ -135,8 +135,26 @@ p{
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease;
-    width: 100%;
-    height: 100%;
+    height: 700px;
+    overflow: hidden;
+}
+
+.projects .projectLeft p {
+  transform: translateX(-110%) rotate(-360deg) scale(0.01);
+  transition: transform 1s ease;
+}
+
+.projects > .projectLeft:hover p, .projects > .projectLeft:focus p {
+  transform: translateX(0) rotate(0deg) scale(1);
+}
+
+.projects .projectRight p {
+  transform: translateX(110%) rotate(360deg) scale(0.01);
+  transition: transform 1s ease;
+}
+
+.projects > .projectRight:hover p, .projects > .projectRight:focus p {
+  transform: translateX(0) rotate(0deg) scale(1);
 }
 
 .projects div:hover{
@@ -172,36 +190,19 @@ ul li:hover{
     cursor: pointer;
 }
 
-/* .certificates{
-  text-align: center;
-  margin-top: 2rem;
-  font-size: 3rem;
-  transform-origin: center;
-  animation: spinCert 2s linear;
-} */
+ul li a{
+    text-decoration: none;
+    color: black;
+}
 
 .certificates{
     text-align: center;
     margin-top: 2rem;
     font-size: 3rem;
     transform-origin: center;
-    animation: spinCert 2s linear;
+    animation: spinCert 1s linear;
 }
 
-/* @keyframes spinCert {
-  0% {
-    opacity: 0;
-    transform: translateX(-100vw) scale(0.25) rotateY(0deg);
-  }
-  50% {
-    opacity: 0.5;
-    transform:  scale(0.75) rotateY(360deg);
-  }
-  100% {
-    opacity: 1;
-    transform: translateX(0) scale(1) rotateY(720deg);
-  }
-} */
 
 @keyframes spinCert {
   0% {
@@ -210,10 +211,12 @@ ul li:hover{
   }
   50% {
     opacity: 0.5;
-    transform:  scale(0.75) rotateY(360deg);
+    transform: scale(0.75) rotateY(360deg);
   }
   100% {
     opacity: 1;
     transform: scale(1) rotateY(720deg);
   }
 }
+
+
